// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Noticebar Event Noticebar onClose 1`] = `
<div
  class="at-noticebar at-noticebar--marquee"
>
  <div
    class="at-noticebar__close"
  >
    <div
      class="at-icon at-icon-close"
    />
  </div>
  <div
    class="at-noticebar__content"
  >
    
    <div
      class="at-noticebar__content-text"
    >
      <div
        class="at-noticebar__content-inner cherry-2020"
        style="animation-duration: 0s;"
      >
        
        这是内容
        
      </div>
    </div>
    <!---->
    <div
      class="at-noticebar__more-icon"
    >
      <div
        class="at-icon at-icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Noticebar Snap render Noticebar -- props icon 1`] = `
<div
  class="at-noticebar"
>
  <!---->
  <div
    class="at-noticebar__content"
  >
    <div
      class="at-noticebar__content-icon"
    >
      <div
        class="at-icon at-icon-volume-plus"
      />
    </div>
    <div
      class="at-noticebar__content-text"
    >
      <div
        class="at-noticebar__content-inner"
      >
        
        这是内容
        
      </div>
    </div>
    <!---->
    <div
      class="at-noticebar__more-icon"
    >
      <div
        class="at-icon at-icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Noticebar Snap render Noticebar -- props moreText & showMore 1`] = `
<div
  class="at-noticebar at-noticebar--single"
>
  <!---->
  <div
    class="at-noticebar__content"
  >
    
    <div
      class="at-noticebar__content-text"
    >
      <div
        class="at-noticebar__content-inner"
      >
        
        这是内容
        
      </div>
    </div>
    <div
      class="at-noticebar__more"
    >
      <div
        class="text"
      >
        see details
      </div>
    </div>
    <div
      class="at-noticebar__more-icon"
    >
      <div
        class="at-icon at-icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Noticebar Snap render Noticebar -- props show 1`] = `
<div
  class="at-noticebar"
>
  <div
    class="at-noticebar__close"
  >
    <div
      class="at-icon at-icon-close"
    />
  </div>
  <div
    class="at-noticebar__content"
  >
    
    <div
      class="at-noticebar__content-text"
    >
      <div
        class="at-noticebar__content-inner"
      >
        
        这是内容
        
      </div>
    </div>
    <!---->
    <div
      class="at-noticebar__more-icon"
    >
      <div
        class="at-icon at-icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Noticebar Snap render Noticebar -- props single 1`] = `
<div
  class="at-noticebar at-noticebar--single"
>
  <!---->
  <div
    class="at-noticebar__content"
  >
    
    <div
      class="at-noticebar__content-text"
    >
      <div
        class="at-noticebar__content-inner"
      >
        
        这是内容
        
      </div>
    </div>
    <!---->
    <div
      class="at-noticebar__more-icon"
    >
      <div
        class="at-icon at-icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Noticebar Snap render Noticebar -- props speed 1`] = `
<div
  class="at-noticebar"
>
  <!---->
  <div
    class="at-noticebar__content"
  >
    
    <div
      class="at-noticebar__content-text"
    >
      <div
        class="at-noticebar__content-inner"
      >
        
        这是内容
        
      </div>
    </div>
    <!---->
    <div
      class="at-noticebar__more-icon"
    >
      <div
        class="at-icon at-icon-chevron-right"
      />
    </div>
  </div>
</div>
`;
